# TKTLSoft

./: CMakeLists.txt  NamingConventions.txt  README.md  installLibrary.sh  runTests.sh
include/: HelloWorld.h  TKTL_BitArray.h  TKTL_Math.h  helloWorld.h
src/: HelloWorld.c  TKTL_BitArray.c  TKTL_Math.c  helloWorld.c
test/: Math.c  Test.c  test.c
